# openclaw-skill-guard

./: .gitignore  .openclaw-guard.yml  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  README.zh-CN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: scan_cli.rs
crates/core/: Cargo.toml
crates/core/assets/: api-taxonomy-v2.yaml  reputation-seeds-v2.yaml  sensitive-data-corpus-v2.yaml  threat-corpus-v2.yaml
crates/core/src/: agent_package.rs  ai_bom.rs  attack_paths.rs  capability_manifest.rs  claims_review.rs  companion_docs.rs  compound_rules.rs  consequence.rs  context.rs  corpus.rs  corpus_findings.rs  dependency_audit.rs  frontmatter.rs  guarded_validator.rs  hidden_instruction.rs  input_resolver.rs  install.rs  instruction.rs  integrity_snapshot.rs  inventory.rs  invocation.rs  issue_codes.rs  lib.rs  localization.rs  mcp_static.rs  metadata.rs  normalize.rs  openclaw_config.rs  policy.rs  precedence.rs  prompt_injection.rs  provenance.rs  reachability.rs  rules.rs  runtime_manifest.rs  runtime_validation.rs  scan.rs  scoring.rs  skill_parse.rs  source_identity.rs  (+5 more)
crates/core/tests/: v2_regressions.rs  v3_regressions.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  main.rs  zh.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/report/tests/: example_outputs.rs
crates/research-locks/: Cargo.toml
docs/: comparison.md  design.md  github-release-kit.md  openclaw-current-signals.md  openclaw-threat-model.md  packaging.md  progress.md  refactor-plan.md  reference-integrations.md  release-ready.md  reporting.md  reverse-engineering.md  rule-catalog.md  runtime-consequences.md  runtime-manifest.md  smoke-scan-summary.md  suppression-audit.md  v2-cls-certify-analysis.md  v2-fusion-plan.md  v2-scope.md  v3-capability-audit.md  v3-open-source-integration.md  v3-openclaw-gap-analysis.md  v3-scope.md  validation-adapter.md  validation-hooks.md
docs/gui-screenshots/: README.md
examples/: demo-commands.md  demo-samples.md
examples/reports/: README.md  benign.json  high-risk.json  install-risk.json  precedence-shadowing.json  prompt-risk.json  runtime-refinement.json  suppression-audit.json  v2-report-demo.html  v2-report-demo.json  v2-report-demo.md  v2-report-demo.sarif  v3-config-demo.html  v3-config-demo.json  v3-config-demo.md  v3-config-demo.sarif
fixtures/benchmark/: benchmark-matrix.yaml
research/: phase1-source-locks.json
research/agent-skills-guard-main/: .gitignore  CHANGELOG.md  README.md  README_EN.md  featured-marketplace.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  verify-build-tools.ps1  vite.config.mts
research/agent-skills-guard-main/src-tauri/: Cargo.toml  tauri.conf.json
research/agent-skills-guard-main/src-tauri/capabilities/: default.json
research/agent-skills-guard-main/src-tauri/icons/: icon.icns
research/agent-skills-guard-main/src-tauri/locales/en/: common.yml  security.yml
research/agent-skills-guard-main/src-tauri/locales/zh/: common.yml  security.yml
research/agent-skills-guard-main/src-tauri/src/: i18n.rs  lib.rs  main.rs
research/agent-skills-guard-main/src-tauri/src/commands/: featured_marketplaces.rs  mod.rs  plugins.rs  security.rs
research/agent-skills-guard-main/src-tauri/src/models/: featured.rs  featured_marketplace.rs  mod.rs  plugin.rs  repository.rs  security.rs  skill.rs
research/agent-skills-guard-main/src-tauri/src/security/: mod.rs  rules.rs  scanner.rs
research/agent-skills-guard-main/src-tauri/src/services/: claude_cli.rs  database.rs  github.rs  mod.rs  plugin_manager.rs  skill_manager.rs
research/openclaw-main/: README.md
schemas/: report.schema.json
(+322 files in other folders)
