[package]
name = "agent-skill-guard-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-skill-guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
agent-skill-guard-core = { path = "../core" }
agent-skill-guard-report = { path = "../report" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
