[package]
name = "openclaw-skill-guard-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
