[package]
name = "openclaw-skill-guard-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openclaw-skill-guard-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
openclaw-skill-guard-core = { path = "../core" }
openclaw-skill-guard-report = { path = "../report" }
rfd = "0.15"
serde_json = "1"

[dev-dependencies]
